# authorizer-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/graphql/: mod.rs
src/prompt/: mod.rs
src/utils/: mod.rs
