[package]
name = "authorizer-cli"
version = "0.1.0"
edition = "2021"
authors = ["Anik Ghosh <tech.anikghosh@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI tool for authorizer"
readme = "README.md"
homepage = "https://github.com/authorizerdev/authorizer-cli"
repository = "https://github.com/authorizerdev/authorizer-cli"
keywords = ["cli", "tool", "authorizer"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.5"
rpassword = "7.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.9", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
